# passeddownandfound

./: .gitignore  GENERIC_APP.md  README.md  Taskfile.yml
.cursor/skills/release/: SKILL.md
backend/: .env.example  ai_service.railway.toml  pyproject.toml  railway.toml
backend/.cursor/: mcp.json
backend/ai_service/: Dockerfile  app.py  pyproject.toml  railway.toml  schemas.py  settings.py  streaming.py
backend/ai_service/agents/: item_research_agent.py
backend/api_service/: .dockerignore  Dockerfile  analysis_worker.py  api.py  api_schemas.py  auth.py  category_utils.py  image_storage.py  pyproject.toml  route_metadata.py  schemas.py  settings.py  tables.py
backend/api_service/lib/database/: database.py
backend/api_service/scripts/: deploy_tables.py
backend/lib/database/: database.py  schemas.py
backend/scripts/: deploy_tables.py
backend/tests/: conftest.py  test_health.py
frontend/: Dockerfile  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: config.ts  globals.css  main.tsx  routeTree.gen.ts
frontend/src/api/: auth.ts  categories.ts  client.ts  inventory.ts
frontend/src/components/dashboard/: category-bar-chart.tsx
frontend/src/components/inventory/: analysis-progress-banner.tsx  analyze-dialog.tsx  camera-capture.tsx  condition-picker.tsx  (+5 more)
frontend/src/hooks/: use-auth.tsx  use-in-progress-item-polling.ts
frontend/src/lib/: analysis-status.ts  condition.ts  format-currency.ts  inventory-metrics.ts  item-evidence.ts  render-markdown-links.tsx  upload-item-images.ts
frontend/src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx
infra/aws/: .gitignore  README.md  cloudfront.tf  iam.tf  locals.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  variables.tf
infra/aws/scripts/: print-railway-env.sh
(+14 files in other folders)
