[project]
name = "passeddownandfound-backend"
version = "0.1.0"
description = "Passed Down and Found inventory management backend"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api_service*", "lib*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
