[project]
name = "atticory-ai-service"
version = "0.1.0"
description = "atticory AI analysis service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.68.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34.0",
]
