[project]
name = "atticory-api-service"
version = "0.1.0"
description = "atticory API service"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
    "uvicorn[standard]>=0.34.0",
]
